--- a/cookie.css
+++ b/cookie.css
@@ -1,25 +1,48 @@
 .cookie-popup {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #f0f0f0;
-    padding: 20px;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+          position: fixed;
+          bottom: -70px;
+          right: 1.5%;
+          transform: translateX(-70%);
+          width: 100%;
+          background-color: #D8D4D8;
+          border-top: 1px solid #ccc;
+          padding: 20px;
+          opacity: 0.95;
+          box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+          transition: opacity 0.5s ease-in-out;
+          transform: translateY(-50%);
+          width: 300px;
+      }
+.cookie-popup.show {
+    opacity: 1;
+    transform: translateX(-50%) translateY(0); /* Move popup to the top when .show class is added */
 }
+      .cookie-content {
+          text-align: center;
+          font-size: 10px;
 
-.cookie-content {
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.buttons {
-    margin-top: 10px;
-}
+      }
+      .buttons {
+          margin-top: 10px;
+      }
+      .buttons button {
+          padding: 10px 20px;
+          margin: 0 10px;
+          border: none;
+          background-color: #007bff;
+          color: #fff;
+          border-radius: 5px;
+          cursor: pointer;
+          font-size: 10px;
+      }
+      .buttons button:hover {
+          background-color: #0056b3;
+      }
 
 button {
     padding: 10px 20px;
     margin-right: 10px;
     cursor: pointer;
 }
+
+
