--- a/CP.css
+++ b/CP.css
@@ -12,11 +12,14 @@
 
 .modal-content {
     background-color: #fefefe;
+    opacity: 0.95;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 50%;
     max-width: 600px;
+    font-size: 10px;
+    
 }
 
 /* Close button */
@@ -32,4 +35,5 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+    
 }
